Use .stop modifier; use .trigger()

--- a/src/assets/components/dy-project.html
+++ b/src/assets/components/dy-project.html
@@ -405,13 +405,12 @@ class DYProject extends DYElement {
 
 		this.on({
 			click(e){
-				this.dispatchEvent(new CustomEvent('dy-project-focus'))
+				this.trigger(new CustomEvent('dy-project-focus'))
 			}
 		})
 		root.find('#close').on({
-			click: e => {
-				this.dispatchEvent(new CustomEvent('dy-project-unfocus'))
-				e.stopPropagation()
+			'click.stop': () => {
+				this.trigger(new CustomEvent('dy-project-unfocus'))
 			}
 		})
 	}
