Add subtle opacity

--- a/src/assets/components/dy-project-header.html
+++ b/src/assets/components/dy-project-header.html
@@ -21,6 +21,7 @@
 
 		#background, #background:before, #background * {
 			background-size: 0;
+			opacity: 0.9;
 			overflow: hidden;
 			position: absolute;
 			width: 100%;
