Move <dy-project>s from Shadow DOM to regular DOM; listen for bubbling event from parent

--- a/src/assets/components/dy-project.html
+++ b/src/assets/components/dy-project.html
@@ -405,12 +405,12 @@ class DYProject extends DYElement {
 
 		this.on({
 			click(e){
-				this.trigger(new CustomEvent('dy-project-focus'))
+				this.trigger(new CustomEvent('dy-project-focus', {bubbles: true}))
 			}
 		})
 		root.find('#close').on({
 			'click.stop': () => {
-				this.trigger(new CustomEvent('dy-project-unfocus'))
+				this.trigger(new CustomEvent('dy-project-unfocus', {bubbles: true}))
 			}
 		})
 	}
