Add "Based On" default prefix

--- a/src/assets/components/khan.html
+++ b/src/assets/components/khan.html
@@ -130,7 +130,7 @@
 		<dy-button theme="accented heavy 3D" class="restart">Restart</dy-button>
 		<dy-button theme="accented heavy 3D" class="stop">Stop</dy-button>
 	</dy-buttons>
-	<dy-khan-badge id="fork"></dy-khan-badge>
+	<dy-khan-badge id="fork" title-prefix="Based On:"></dy-khan-badge>
 </template>
 
 <template id="dy-khan-badge">
