Don't make prefix part of link

--- a/src/assets/components/khan.html
+++ b/src/assets/components/khan.html
@@ -138,7 +138,7 @@
 		<img id="thumbnail">
 	</a>
 	<div>
-		<p><a class="link"><span id="title-prefix"></span> <span id="title"></span></a></p>
+		<p><span id="title-prefix"></span> <a class="link"><span id="title"></span></a></p>
 		<dy-khan-stats id="stats">
 			<span slot="votes"></span>
 			<span slot="spin-offs"></span>
