Correct reference to prefix <span>

--- a/src/assets/components/khan.html
+++ b/src/assets/components/khan.html
@@ -269,7 +269,7 @@ class DYKhanBadge extends DYElement {
 		}else if(attr === 'title-prefix'){
 			const titlePrefix = newVal
 			root.updateWithModel({
-				'.title-prefix': titlePrefix
+				'#title-prefix': titlePrefix
 			})
 		}
 	}
