Allow method chaining

--- a/src/assets/components/dy-notifications.html
+++ b/src/assets/components/dy-notifications.html
@@ -166,6 +166,7 @@ class DYNotification extends DYElement {
 			.removeClass('hide')
 			.animateClass('remind')
 			.dismiss(dismiss || this.duration)
+		return this
 	}
 
 	// .dismiss(duration)
