Increase notification max-width

--- a/src/assets/components/dy-notifications.html
+++ b/src/assets/components/dy-notifications.html
@@ -70,7 +70,7 @@ customElements.define('dy-notifications', DYNotifications)
 			padding: 0.4em 0.5em;
 			width: max-content;
 			min-width: 10vw;
-			max-width: 360px;
+			max-width: 22rem;
 			min-height: min-content;
 			max-height: 100px;
 			transform-origin: right bottom;
