--- a/src/assets/components/dy-project-header.html
+++ b/src/assets/components/dy-project-header.html
@@ -75,6 +75,7 @@
 
 		.excerpt {
 			background-color: rgba(255, 255, 255, 0.2);
+			box-shadow: var(--box-shadow-1);
 			border-radius: 0.5em;
 			font-size: 0.9em;
 			font-style: italic;
