--- a/src/assets/components/khan.html
+++ b/src/assets/components/khan.html
@@ -2,6 +2,7 @@
 	<style>
 		:host {
 			background-color: rgba(255, 255, 255, 0.6);
+			box-shadow: var(--box-shadow-1);
 			border-radius: var(--padding-small);
 			display: block;
 			padding: var(--padding-small);
