Set .full state if this.isFullHeight

--- a/src/assets/components/dy-header.html
+++ b/src/assets/components/dy-header.html
@@ -172,7 +172,7 @@ class DYHeader extends DYElement {
 
 	update(){
 		this.$header
-			.toggleClass(this.isFullHeight, 'full-height')
+			.toggleClass(this.isFullHeight, 'full-height', 'full')
 			.toggleClass(this.isImmersive, 'immersive')
 		
 		this.$secondaryMenu
