--- a/src/assets/components/dy-comments.html
+++ b/src/assets/components/dy-comments.html
@@ -2,12 +2,15 @@
 
 <template id="dy-comments">
 	<style>
+		:host {
+			margin: -0.5em;
+		}
+		:host > *, ::slotted(*) {
+			margin: 0.5em;
+		}
 		#reaction {
 			flex-direction: column;
 			/*align-items: center;*/
-		}
-		#reaction ~ * {
-			margin-top: 1em;
 		}
 		dy-comment, dy-comment-reply {
 			font-size: 0.9em;
@@ -26,6 +29,7 @@
 		</ul>
 	</div>
 	<dy-comment-reply></dy-comment-reply>
+	<slot>
 </template>
 
 <template id="dy-comment">
@@ -238,11 +242,10 @@ class DYComments extends DYElement {
 
 				const $comments = []
 				for(const comment of comments){
-					const $comment = $$$('dy-comment').appendTo(root.find('#reaction'))
+					const $comment = $$$('dy-comment').appendTo(this)
 					X(this, root, $comment)
 					$comment.data = comment
 					$comments[comment.id] = $comment
-					root.append($comment)
 				}
 				for(const comment of comments){
 					if(comment.parent)
