--- a/src/assets/components/dy-comments.html
+++ b/src/assets/components/dy-comments.html
@@ -51,7 +51,7 @@
 		}
 		blockquote, form {
 			background-color: rgba(255, 255, 255, 0.5);
-			box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+			box-shadow: var(--box-shadow-1);
 			border-radius: 0.75em;
 			padding: 0.75em 1em;
 			position: relative;
