--- a/src/assets/article.css
+++ b/src/assets/article.css
@@ -7,6 +7,7 @@ article {
 }
 @media (min-width: 60rem) {
 	article {
+		width: 0; /* Shrink as much as necessary to avoid pushing sidebar out */
 		margin-right: var(--padding-neg);
 	}
 }
