--- a/src/assets/header.css
+++ b/src/assets/header.css
@@ -63,6 +63,9 @@
 	/*position: sticky;
 	top: 0;*/
 }
+#header.immersive #main-menu {
+	background: linear-gradient(rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0.7));
+}
 #header.full #main-menu {
 	background:
 		radial-gradient(
@@ -96,9 +99,6 @@
 	position: fixed;
 	top: 0;
 }
-#header.immersive #main-menu {
-	background: linear-gradient(rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0.7));
-}
 /*#header.immersive #main-menu {
 	background-color: transparent;
 	background: linear-gradient(rgba(0, 0, 0, 0.3), transparent);
@@ -117,6 +117,9 @@
 	padding: 0 var(--padding);
 	order: 1;
 }
+#header.full-height #logo {
+	max-height: 7rem;
+}
 #header.full #logo {
 	margin-right: 0;
 	margin-bottom: 0.5em;
@@ -125,17 +128,6 @@
 
 	flex-direction: column;
 	align-items: center;
-}
-#header.full #logo {
-	max-height: 7rem;
-}
-#logo svg {
-	width: auto;
-	max-width: 100%;
-	height: 100%;
-	transform: perspective(500px) translate(0); /* adding translate(0) ensures height is updated after transitioning from sticky #header to non sticky #header */
-	transform-origin: left;
-	transition: var(--transition-slow) var(--ease-in-out-back);
 }
 /*#header.immersive #logo img {
 	filter: brightness(20);
@@ -150,12 +142,20 @@
 	font-size: 0.5em;
 	letter-spacing: 0.4em;
 }
-/*#header.immersive #logo svg path {
-	fill: #fff;
-}*/
+#logo svg {
+	width: auto;
+	max-width: 100%;
+	height: 100%;
+	transform: perspective(500px) translate(0); /* adding translate(0) ensures height is updated after transitioning from sticky #header to non sticky #header */
+	transform-origin: left;
+	transition: var(--transition-slow) var(--ease-in-out-back);
+}
 #header:not(.full) #logo:hover svg {
 	transform: perspective(500px) rotateY(20deg);
 }
+/*#header.immersive #logo svg path {
+	fill: #fff;
+}*/
 
 #main-menu:before {
 	content: '';
