--- a/src/assets/components/dy-blog.html
+++ b/src/assets/components/dy-blog.html
@@ -34,13 +34,13 @@
 			filter: blur(1rem);
 
 			transform: scale(1.1);
-			z-index: -1;
 		}
 
 		#featured-image-wrapper, #outer-wrapper {
 			flex-direction: column;
 			overflow-y: scroll;
 			padding: var(--padding) 0;
+			position: relative;
 		}
 
 		#featured-image-wrapper {
