Use <dy-nav> in <dy-header>; optimize "order" property

--- a/src/assets/components/dy-header.html
+++ b/src/assets/components/dy-header.html
@@ -1,4 +1,5 @@
 <link rel="import" href="dy-icon.html">
+<link rel="import" href="dy-nav.html">
 
 <template id="dy-header">
 	<style>
@@ -134,10 +135,7 @@
 					</ul>-->
 				</li>
 			</ul>
-			<!--<div id="navigation">
-				<a rel="prev">Previous: <span></span></a>
-				<a rel="next">Next: <span></span></a>
-			</div>-->
+			<dy-nav></dy-nav>
 		</nav>
 	</header>
 </template>
