--- a/src/assets/components/dy-project-header.html
+++ b/src/assets/components/dy-project-header.html
@@ -85,7 +85,10 @@
 			max-width: 35em;
 		}
 		:host(.dark) .excerpt {
-			background-color: rgba(0, 0, 0, 0.4);
+			background-color: rgba(0, 0, 0, 0.25);
+			text-shadow: rgba(0, 0, 0, 0.5) 0 1px 2px;
+			filter: brightness(2);
+			color: #fff;
 		}
 
 		#dates {
