--- a/src/assets/components/dy-project-header.html
+++ b/src/assets/components/dy-project-header.html
@@ -89,6 +89,23 @@
 			text-shadow: rgba(0, 0, 0, 0.5) 0 1px 2px;
 			filter: brightness(1.5);
 		}
+		.excerpt:first-letter, .excerpt > :first-child:first-letter {
+			color: var(--accent-1);
+			float: left;
+			font-family: var(--heading-font);
+			font-weight: bold;
+			font-style: initial;
+			margin-right: 0.1em;
+			text-shadow: rgba(0, 0, 0, 0.1) 2px 2px, rgba(0, 0, 0, 0.05) 4px 4px;
+
+			/* Slabo 13px */
+			font-size: 3.5em;
+			line-height: 1;
+
+			/* Fun Font */
+			font-size: 4.75em;
+			line-height: 1;
+		}
 
 		#dates {
 			font-family: var(--heading-font);
