Default to display: inline-flex

--- a/src/assets/components/dy-button.html
+++ b/src/assets/components/dy-button.html
@@ -43,9 +43,10 @@ customElements.define('dy-buttons', DYButtons)
 <template id="dy-button">
 	<style>
 		:host, button {
-			display: flex;
+			display: inline-flex;
 			justify-content: center;
 			align-items: center;
+			vertical-align: middle;
 			flex: auto;
 
 			cursor: pointer;
