Use .findAll(), not .find()

--- a/src/assets/components/dy-header.html
+++ b/src/assets/components/dy-header.html
@@ -157,7 +157,7 @@ class DYHeader extends DYElement {
 			)
 		})
 
-		root.find('li.has-sub-menu').hover(function(){
+		root.findAll('li.has-sub-menu').hover(function(){
 			$body.addClass('sub-menu-open')
 			this.closest('nav').addClass('sub-menu-open')
 		}, function(){
