Add $nav getter

--- a/src/assets/components/dy-header.html
+++ b/src/assets/components/dy-header.html
@@ -212,6 +212,9 @@ class DYHeader extends DYElement {
 	get $mainMenu(){
 		return this.root.find('#main-menu')
 	}
+	get $nav(){
+		return this.root.find('dy-nav')
+	}
 	get $logo(){
 		return this.root.find('#logo')
 	}
