--- a/src/assets/components/dy-terms.html
+++ b/src/assets/components/dy-terms.html
@@ -104,6 +104,16 @@ class DYTerms extends DYElement {
 	get $terms(){
 		return this.root.findAll('[rel=tag]')
 	}
+
+	static make$Term(term){
+		return $$$('dy-button')
+			.attr('theme', 'plain')
+			.attr('animated', '')
+			//.attr('tabindex', '0') // Focusable
+			.attr('rel', 'tag')
+			.attr('title', term.description)
+			.html(term.name)
+	}
 }
 customElements.define('dy-terms', DYTerms)
 </script>
