Fade out dy-nav on secondary menu submenu item hover

--- a/src/assets/header.css
+++ b/src/assets/header.css
@@ -415,7 +415,8 @@ nav > ul > li ul > li > a {
 
 
 
-#secondary-menu.sub-menu-open ~ #header:not(.full) > nav > ul > li > a {
+#secondary-menu.sub-menu-open ~ #header:not(.full) > nav > ul > li > a,
+#secondary-menu.sub-menu-open ~ #header:not(.full) dy-nav {
 	opacity: 0;
 }
 /*body.sub-menu-open main > * > *,
