Use rem for margins, ensure it's applied to all applicable children

--- a/src/assets/components/dy-comments.html
+++ b/src/assets/components/dy-comments.html
@@ -2,11 +2,12 @@
 
 <template id="dy-comments">
 	<style>
-		:host {
-			margin: -0.5em;
+		#inner-wrapper {
+			flex-direction: column;
+			margin: -0.5rem;
 		}
-		:host > *, ::slotted(*) {
-			margin: 0.5em;
+		#inner-wrapper > *, #inner-wrapper > h2, ::slotted(*) {
+			margin: 0.5rem;
 		}
 		#reaction {
 			flex-direction: column;
