Import <dy-figure> in case it's used within an article

--- a/src/assets/components/dy-page.html
+++ b/src/assets/components/dy-page.html
@@ -6,6 +6,8 @@
 <link rel="import" href="dy-background.html">
 <link rel="import" href="dy-notifications.html">
 
+<link rel="import" href="dy-figure.html">
+
 <template id="dy-page">
 	<style>
 		@import './wp-content/themes/DY/assets/main.css';
