"Real names only, please!"

--- a/src/assets/components/dy-comments.html
+++ b/src/assets/components/dy-comments.html
@@ -217,7 +217,7 @@
 			<hr>
 			<header>
 				<cite>
-					<input type="text" id="author" placeholder="Your Name" name="author_name" required>
+					<input type="text" id="author" placeholder="Your Name (Real names only, please!)" name="author_name" required>
 				</cite>
 				<input type="email" placeholder="your_email@example.com" name="author_email" required>
 			</header>
